# bismarck

./: .envrc  .gitignore  pyproject.toml  readme.md
bismarck/: __init__.py  errors.py  llm.py  schema.py
bismarck/data/: __init__.py  models.yaml
bismarck/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py
bismarck/routing/: __init__.py  model_registry.py  provider_router.py
tests/: conftest.py  test_llm.py
tests/routing/: __init__.py  test_model_registry.py  test_provider_router.py
