[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bismarck"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "anthropic",
    "google-genai",
    "pydantic",
    "pyyaml",
]

[tool.setuptools.packages.find]
include = ["bismarck*"]

[tool.setuptools.package-data]
"bismarck.data" = ["*.yaml"]